--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 8868
-logging:
-  config: classpath:logbak-spring.xml
-  level:
-    hightconcurren: debug
-    org:
-      mybatis: debug
+#logging:
+#  config: classpath:logbak-spring.xml
+#  level:
+#    hightconcurren: debug
+#    org:
+#      mybatis: debug
